Add ユーザ取得のドキュメント
